--- a/PedidoVenda/src/main/webapp/produtos/CadastroProduto.xhtml
+++ b/PedidoVenda/src/main/webapp/produtos/CadastroProduto.xhtml
@@ -11,6 +11,10 @@
 		<h:form>
 			<h1>Novo Produto</h1>
 			
+			<f:metadata>
+				<f:event listener="#{cadastroProdutoBean.inicializar()}" type="preRenderView"/>
+			</f:metadata>
+			
 			<p:messages autoUpdate="true" closable="true"/>
 			
 			<p:toolbar style="margin-top: 20px">
@@ -36,6 +40,8 @@
 				<p:outputLabel value="Categoria" for="categoria"/>
 				<p:selectOneMenu id="categoria" >
 					<f:selectItem itemLabel="Selecione a categoria"/>
+					<f:selectItems itemLabel="#{categoria.descricao}" itemValue="#{categoria}"
+						value="#{cadastroProdutoBean.categoriasRaizes}" var="categoria"/>
 				</p:selectOneMenu>
 				
 				<p:outputLabel value="Subcategoria" for="subCategoria"/>
